# rust-backup-tool

./: .gitignore  Cargo.toml
src/: archive.rs  args.rs  config.rs  errors.rs  fs_utils.rs  lib.rs  main.rs
src/tests/: integration.rs
tests/: integration.rs
