[package]
name = "rust-backup-tool"
version = "0.1.0"
edition = "2021"
authors = ["Adam Robert <adam.robert.motta@gmail.com>"]

[dependencies]
assert_cmd = "2.1.2"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
predicates = "3.1.4"
tempfile = "3.27.0"
thiserror = "2.0.18"
